# k8s-forge

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  codeburn-2026-06-19.json  pyproject.toml
.github/workflows/: ci.yml
docs/: config-reference.md  debian-install.md  design.md  getting-started.md  module-10-tracing.md  module-11-terraform.md  module-12-ansible.md  module-13-security-audit.md  module-14-capstone.md  module-15-repository-discovery.md  module-16-explain.md  module-17-studio.md  module-18-workload-types.md  module-2-helm.md  module-2-kubernetes.md  module-3-ingress.md  module-3-linkerd.md  module-4-kyverno.md  module-4-networkpolicy.md  module-5-supply-chain.md  module-6-ci.md  module-7-gitops-argocd.md  module-8-observability.md  module-9-logging.md  operations.md  real-app-weatherapi.md  release-checklist.md  release-v1.md  troubleshooting.md
examples/: admin-api.yaml  demo-app.yaml
scripts/: check_release.sh
src/k8s_forge/: __init__.py  ansible_renderer.py  capstone_renderer.py  ci_renderer.py  cli.py  config_loader.py  discovery.py  discovery_renderer.py  exceptions.py  explain.py  explain_renderer.py  gitops_renderer.py  helm_renderer.py  kubectl.py  local_cluster.py  logging_renderer.py  models.py  observability_renderer.py  renderer.py  security_renderer.py  supply_chain_renderer.py  terraform_renderer.py  tracing_renderer.py
src/k8s_forge/ansible_templates/: README.md.j2  inventory.ini.j2  site.yml.j2
src/k8s_forge/capstone_templates/: README.md.j2  architecture-overview.md.j2  devsecops-chain.md.j2  final-report-outline.md.j2  lab-summary.md.j2  manual-steps.md.j2  modules-summary.md.j2  runtime-dependencies.md.j2  security-summary.md.j2  v1-readiness.md.j2  validation-checklist.md.j2
src/k8s_forge/ci_templates/: README.md.j2
src/k8s_forge/discovery_templates/: discovery-report.md.j2  k8s-forge-app.yaml.j2  (+1 more)
tests/: test_ansible_renderer.py  test_capstone_renderer.py  test_ci_renderer.py  test_cli.py  test_config_loader.py  test_discovery.py  test_discovery_cli.py  test_discovery_renderer.py  test_explain.py  test_explain_cli.py  test_gitops_renderer.py  test_helm_renderer.py  test_kubectl.py  test_local_cluster.py  test_logging_renderer.py  test_models.py  test_observability_renderer.py  test_project_consistency.py  test_renderer.py  test_security_renderer.py  test_studio_cli.py  test_studio_command_runner.py  test_studio_pipeline.py  test_studio_routes.py  test_studio_scaffold.py  test_studio_server.py  test_studio_workspace.py  test_supply_chain_renderer.py  test_terraform_renderer.py  test_tracing_renderer.py
(+73 files in other folders)
