[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-forge"
version = "0.1.0"
description = "Generic Kubernetes manifest generator for stateless web applications."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "k8s-forge contributors" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: System :: Systems Administration",
]
dependencies = [
  "jinja2>=3.1",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "rich>=13.7",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "bandit>=1.7",
  "mypy>=1.10",
  "pip-audit>=2.7",
  "pytest>=8.2",
  "ruff>=0.5",
  "types-PyYAML>=6.0",
]

[project.scripts]
k8s-forge = "k8s_forge.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
pretty = true

[tool.pytest.ini_options]
testpaths = ["tests"]
